# Survivaling

./: README.md
ProjectSurvival/: ProjectSurvival.cbp  ProjectSurvival.depend  ProjectSurvival.layout  elementy_stale.cpp  funkcje_przedmiotow.cpp  gra.cpp  gra.h  gra_ruch_gracza.cpp  gracz.cpp  gracz.h  graficzny.cpp  grafika.cpp  grafika.h  main.cpp  objekt.cpp  przedmiot.cpp  przedmiot.cpp.save-failed  przedmiot.h  structy.cpp  structy.h  swiat.cpp  swiat.h  swiat2.h  zwierzeta.cpp  zwierzeta2.cpp
The Game/: CMakeCache.txt  Obrazy — skrót.lnk  krytyki.txt
The Game/ProjectSurvival/: CMakeLists.txt  elementy_stale.cpp  funkcje_przedmiotow.cpp  gra.h  gra_ruch_gracza.cpp  gracz.cpp  gracz.h  grafika.cpp  grafika.h  main.cpp  objekt.cpp  swiat.cpp  swiat.h  zombie.cpp  zwierzeta.cpp
